Endpoint /api/books/{book_id} includes book reviews in response